fix overflow

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -138,6 +138,6 @@
     }
 
     body {
-        @apply bg-background text-foreground;
+        @apply overflow-x-hidden bg-background text-foreground;
     }
 }
